--- a/CCS-Uploader/Controllers/Wizard/ReviewView.xib
+++ b/CCS-Uploader/Controllers/Wizard/ReviewView.xib
@@ -52,23 +52,21 @@
 								<array class="NSMutableArray" key="NSSubviews">
 									<object class="NSTableView" id="539870308">
 										<reference key="NSNextResponder" ref="637923664"/>
-										<int key="NSvFlags">256</int>
+										<int key="NSvFlags">4352</int>
 										<string key="NSFrameSize">{899, 442}</string>
 										<reference key="NSSuperview" ref="637923664"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="111903733"/>
+										<reference key="NSNextKeyView" ref="674420743"/>
 										<string key="NSReuseIdentifierKey">_NS:13</string>
 										<bool key="NSEnabled">YES</bool>
 										<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 										<bool key="NSControlAllowsExpansionToolTips">YES</bool>
-										<object class="NSTableHeaderView" key="NSHeaderView" id="481802231">
-											<reference key="NSNextResponder" ref="111903733"/>
+										<object class="NSTableHeaderView" key="NSHeaderView" id="496905923">
+											<reference key="NSNextResponder" ref="904426163"/>
 											<int key="NSvFlags">256</int>
 											<string key="NSFrameSize">{899, 17}</string>
-											<reference key="NSSuperview" ref="111903733"/>
+											<reference key="NSSuperview" ref="904426163"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="637923664"/>
-											<string key="NSReuseIdentifierKey">_NS:16</string>
 											<reference key="NSTableView" ref="539870308"/>
 										</object>
 										<object class="_NSCornerView" key="NSCornerView" id="936226320">
@@ -82,13 +80,13 @@
 										</object>
 										<array class="NSMutableArray" key="NSTableColumns">
 											<object class="NSTableColumn" id="974742679">
-												<double key="NSWidth">116</double>
+												<double key="NSWidth">230.8203125</double>
 												<double key="NSMinWidth">40</double>
 												<double key="NSMaxWidth">1000</double>
 												<object class="NSTableHeaderCell" key="NSHeaderCell">
 													<int key="NSCellFlags">75497536</int>
 													<int key="NSCellFlags2">2048</int>
-													<string key="NSContents"/>
+													<string key="NSContents">Folder</string>
 													<object class="NSFont" key="NSSupport" id="26">
 														<string key="NSName">.LucidaGrandeUI</string>
 														<double key="NSSize">11</double>
@@ -140,13 +138,13 @@
 												<reference key="NSTableView" ref="539870308"/>
 											</object>
 											<object class="NSTableColumn" id="377685925">
-												<double key="NSWidth">777</double>
+												<double key="NSWidth">160</double>
 												<double key="NSMinWidth">40</double>
 												<double key="NSMaxWidth">1000</double>
 												<object class="NSTableHeaderCell" key="NSHeaderCell">
 													<int key="NSCellFlags">75497536</int>
 													<int key="NSCellFlags2">2048</int>
-													<string key="NSContents"/>
+													<string key="NSContents">Camera Rotations Detected</string>
 													<reference key="NSSupport" ref="26"/>
 													<reference key="NSBackgroundColor" ref="970557227"/>
 													<reference key="NSTextColor" ref="83405007"/>
@@ -165,13 +163,96 @@
 												<bool key="NSIsEditable">YES</bool>
 												<reference key="NSTableView" ref="539870308"/>
 											</object>
+											<object class="NSTableColumn" id="945780817">
+												<double key="NSWidth">160</double>
+												<double key="NSMinWidth">10</double>
+												<double key="NSMaxWidth">3.4028234663852886e+38</double>
+												<object class="NSTableHeaderCell" key="NSHeaderCell">
+													<int key="NSCellFlags">75497536</int>
+													<int key="NSCellFlags2">2048</int>
+													<string key="NSContents">User Rotations Detected</string>
+													<reference key="NSSupport" ref="26"/>
+													<object class="NSColor" key="NSBackgroundColor" id="759164523">
+														<int key="NSColorSpace">6</int>
+														<string key="NSCatalogName">System</string>
+														<string key="NSColorName">headerColor</string>
+														<object class="NSColor" key="NSColor" id="233064630">
+															<int key="NSColorSpace">3</int>
+															<bytes key="NSWhite">MQA</bytes>
+														</object>
+													</object>
+													<reference key="NSTextColor" ref="83405007"/>
+												</object>
+												<object class="NSTextFieldCell" key="NSDataCell" id="946401610">
+													<int key="NSCellFlags">337641536</int>
+													<int key="NSCellFlags2">2048</int>
+													<string key="NSContents">Text Cell</string>
+													<reference key="NSSupport" ref="581744779"/>
+													<reference key="NSControlView" ref="539870308"/>
+													<reference key="NSBackgroundColor" ref="866935601"/>
+													<reference key="NSTextColor" ref="873661225"/>
+												</object>
+												<int key="NSResizingMask">3</int>
+												<bool key="NSIsResizeable">YES</bool>
+												<bool key="NSIsEditable">YES</bool>
+												<reference key="NSTableView" ref="539870308"/>
+											</object>
+											<object class="NSTableColumn" id="891230744">
+												<double key="NSWidth">160</double>
+												<double key="NSMinWidth">10</double>
+												<double key="NSMaxWidth">3.4028234663852886e+38</double>
+												<object class="NSTableHeaderCell" key="NSHeaderCell">
+													<int key="NSCellFlags">75497536</int>
+													<int key="NSCellFlags2">2048</int>
+													<string key="NSContents">Images Auto Renamed</string>
+													<reference key="NSSupport" ref="26"/>
+													<reference key="NSBackgroundColor" ref="759164523"/>
+													<reference key="NSTextColor" ref="83405007"/>
+												</object>
+												<object class="NSTextFieldCell" key="NSDataCell" id="1061349708">
+													<int key="NSCellFlags">337641536</int>
+													<int key="NSCellFlags2">2048</int>
+													<string key="NSContents">Text Cell</string>
+													<reference key="NSSupport" ref="581744779"/>
+													<reference key="NSControlView" ref="539870308"/>
+													<reference key="NSBackgroundColor" ref="866935601"/>
+													<reference key="NSTextColor" ref="873661225"/>
+												</object>
+												<int key="NSResizingMask">3</int>
+												<bool key="NSIsResizeable">YES</bool>
+												<bool key="NSIsEditable">YES</bool>
+												<reference key="NSTableView" ref="539870308"/>
+											</object>
+											<object class="NSTableColumn" id="341671160">
+												<double key="NSWidth">160</double>
+												<double key="NSMinWidth">10</double>
+												<double key="NSMaxWidth">3.4028234663852886e+38</double>
+												<object class="NSTableHeaderCell" key="NSHeaderCell">
+													<int key="NSCellFlags">75497536</int>
+													<int key="NSCellFlags2">2048</int>
+													<string key="NSContents">Folder Viewed</string>
+													<reference key="NSSupport" ref="26"/>
+													<reference key="NSBackgroundColor" ref="759164523"/>
+													<reference key="NSTextColor" ref="83405007"/>
+												</object>
+												<object class="NSTextFieldCell" key="NSDataCell" id="353245521">
+													<int key="NSCellFlags">337641536</int>
+													<int key="NSCellFlags2">2048</int>
+													<string key="NSContents">Text Cell</string>
+													<reference key="NSSupport" ref="581744779"/>
+													<reference key="NSControlView" ref="539870308"/>
+													<reference key="NSBackgroundColor" ref="866935601"/>
+													<reference key="NSTextColor" ref="873661225"/>
+												</object>
+												<int key="NSResizingMask">3</int>
+												<bool key="NSIsResizeable">YES</bool>
+												<bool key="NSIsEditable">YES</bool>
+												<reference key="NSTableView" ref="539870308"/>
+											</object>
 										</array>
 										<double key="NSIntercellSpacingWidth">3</double>
 										<double key="NSIntercellSpacingHeight">2</double>
-										<object class="NSColor" key="NSBackgroundColor">
-											<int key="NSColorSpace">3</int>
-											<bytes key="NSWhite">MQA</bytes>
-										</object>
+										<reference key="NSBackgroundColor" ref="233064630"/>
 										<object class="NSColor" key="NSGridColor">
 											<int key="NSColorSpace">6</int>
 											<string key="NSCatalogName">System</string>
@@ -182,13 +263,13 @@
 											</object>
 										</object>
 										<double key="NSRowHeight">17</double>
-										<int key="NSTvFlags">-700448768</int>
+										<int key="NSTvFlags">1117782016</int>
 										<reference key="NSDelegate"/>
 										<reference key="NSDataSource"/>
-										<int key="NSColumnAutoresizingStyle">4</int>
+										<int key="NSColumnAutoresizingStyle">0</int>
 										<int key="NSDraggingSourceMaskForLocal">15</int>
 										<int key="NSDraggingSourceMaskForNonLocal">0</int>
-										<bool key="NSAllowsTypeSelect">YES</bool>
+										<bool key="NSAllowsTypeSelect">NO</bool>
 										<int key="NSTableViewDraggingDestinationStyle">0</int>
 										<int key="NSTableViewGroupRowStyle">1</int>
 									</object>
@@ -202,18 +283,17 @@
 								<reference key="NSBGColor" ref="866935601"/>
 								<int key="NScvFlags">4</int>
 							</object>
-							<object class="NSClipView" id="111903733">
+							<object class="NSClipView" id="904426163">
 								<reference key="NSNextResponder" ref="46110882"/>
 								<int key="NSvFlags">2338</int>
 								<array class="NSMutableArray" key="NSSubviews">
-									<reference ref="481802231"/>
+									<reference ref="496905923"/>
 								</array>
 								<string key="NSFrame">{{1, 0}, {899, 17}}</string>
 								<reference key="NSSuperview" ref="46110882"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="481802231"/>
-								<string key="NSReuseIdentifierKey">_NS:15</string>
-								<reference key="NSDocView" ref="481802231"/>
+								<reference key="NSNextKeyView" ref="496905923"/>
+								<reference key="NSDocView" ref="496905923"/>
 								<reference key="NSBGColor" ref="866935601"/>
 								<int key="NScvFlags">4</int>
 							</object>
@@ -228,34 +308,34 @@
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								<reference key="NSTarget" ref="46110882"/>
 								<string key="NSAction">_doScroller:</string>
-								<double key="NSCurValue">37</double>
-								<double key="NSPercent">0.1947367936372757</double>
+								<double key="NSPercent">0.99774266365688491</double>
 							</object>
 							<object class="NSScroller" id="814809299">
 								<reference key="NSNextResponder" ref="46110882"/>
 								<int key="NSvFlags">-2147483392</int>
-								<string key="NSFrame">{{1, 119}, {223, 15}}</string>
+								<string key="NSFrame">{{1, 444}, {899, 15}}</string>
 								<reference key="NSSuperview" ref="46110882"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:60</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								<int key="NSsFlags">1</int>
 								<reference key="NSTarget" ref="46110882"/>
 								<string key="NSAction">_doScroller:</string>
-								<double key="NSPercent">0.57142859697341919</double>
+								<double key="NSPercent">0.99888888888888894</double>
 							</object>
 							<reference ref="936226320"/>
 						</array>
 						<string key="NSFrameSize">{901, 460}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="637923664"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="NSsFlags">133682</int>
 						<reference key="NSVScroller" ref="674420743"/>
 						<reference key="NSHScroller" ref="814809299"/>
 						<reference key="NSContentView" ref="637923664"/>
-						<reference key="NSHeaderClipView" ref="111903733"/>
+						<reference key="NSHeaderClipView" ref="904426163"/>
 						<reference key="NSCornerView" ref="936226320"/>
 						<bytes key="NSScrollAmts">QSAAAEEgAABBmAAAQZgAAA</bytes>
 						<double key="NSMinMagnification">0.25</double>
@@ -266,6 +346,7 @@
 				<string key="NSFrameSize">{901, 460}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="46110882"/>
 				<string key="NSClassName">NSView</string>
 			</object>
 		</array>
@@ -388,8 +469,8 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="539870308"/>
 							<reference ref="814809299"/>
-							<reference ref="481802231"/>
 							<reference ref="674420743"/>
+							<reference ref="496905923"/>
 						</array>
 						<reference key="parent" ref="1005"/>
 					</object>
@@ -399,17 +480,15 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="974742679"/>
 							<reference ref="377685925"/>
+							<reference ref="945780817"/>
+							<reference ref="891230744"/>
+							<reference ref="341671160"/>
 						</array>
 						<reference key="parent" ref="46110882"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
 						<reference key="object" ref="814809299"/>
-						<reference key="parent" ref="46110882"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">6</int>
-						<reference key="object" ref="481802231"/>
 						<reference key="parent" ref="46110882"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -444,6 +523,50 @@
 						<reference key="parent" ref="974742679"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">18</int>
+						<reference key="object" ref="945780817"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="946401610"/>
+						</array>
+						<reference key="parent" ref="539870308"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">19</int>
+						<reference key="object" ref="946401610"/>
+						<reference key="parent" ref="945780817"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">20</int>
+						<reference key="object" ref="891230744"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="1061349708"/>
+						</array>
+						<reference key="parent" ref="539870308"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">21</int>
+						<reference key="object" ref="1061349708"/>
+						<reference key="parent" ref="891230744"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">22</int>
+						<reference key="object" ref="341671160"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="353245521"/>
+						</array>
+						<reference key="parent" ref="539870308"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">23</int>
+						<reference key="object" ref="353245521"/>
+						<reference key="parent" ref="341671160"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">16</int>
+						<reference key="object" ref="900963054"/>
+						<reference key="parent" ref="1005"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
 						<reference key="object" ref="579498098"/>
 						<reference key="parent" ref="1005"/>
@@ -454,14 +577,14 @@
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">16</int>
-						<reference key="object" ref="900963054"/>
-						<reference key="parent" ref="1005"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
 						<reference key="object" ref="411650708"/>
 						<reference key="parent" ref="1005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">30</int>
+						<reference key="object" ref="496905923"/>
+						<reference key="parent" ref="46110882"/>
 					</object>
 				</array>
 			</object>
@@ -482,11 +605,17 @@
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="NO" key="3.IBNSViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="30.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -495,10 +624,18 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">17</int>
+			<int key="maxID">30</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">ReviewViewController</string>
 					<string key="superclassName">NSViewController</string>
